--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "esbuild src/index.js --bundle --platform=node --target=node20 --outfile=dist/index.js",
-    "pub": "npm run build && git add . && mo-commit -S && git push"
+    "pub": "npm run build && git add . "
   },
   "keywords": [],
   "author": "",
